fix: add swagger config for github routes
